--- a/roles/monitoring/templates/prometheus.yml.j2
+++ b/roles/monitoring/templates/prometheus.yml.j2
@@ -1,11 +1,14 @@
 global:
   scrape_interval: 10s
+
 scrape_configs:
   - job_name: 'prometheus_master'
     scheme: https
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:9090']
+      - targets:
+        - {{ monitoring_srv }}:9090
+
   - job_name: 'node_exporter'
     scrape_interval: 5s
     static_configs:
@@ -29,5 +32,12 @@ scrape_configs:
       - targets:
         - {{ frontend_srv }}:9113
 
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+      - {{ monitoring_srv }}:9093
+
 rule_files:
+  - 'alert.rules.yml'
   - 'mysql_exporter_recording_rules.yml'
